--- a/html/atletas.html
+++ b/html/atletas.html
@@ -1,100 +1,82 @@
-<!DOCTYPE html>
-<html lang="pt-BR">
+<!doctype html>
+<html lang="en">
 
 <head>
-    <meta content="text/html; charset=UTF-8"   />
-    <title>Linguagem de programação 2 - Associação Sul Americana - Handebol Feminino Florianópolis</title>
-    <link rel="stylesheet" type="text/css" href="/css/stylesheet.css" media="screen">
+    <title>Title</title>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="../css/stylesheet.css">
 </head>
 
 <body>
-    <div class="container">
-        <header>
-            <ul>
-                <li class="link">
-                    <a href="http://www.acfutsal.com/"><img src="/images/719.png" width="150pt" height="150pt"></a>
-                </li>
-                <li>
-                    <span class="titulo">
-                        <h1>Associação Sul Americana Esporte, Cultura, Turismo e Lazer</h1>
-                    </span>
-                    <br />
-                    <span class="subtitulo">
-                        <h2>Handebol Feminino - Florianópolis</h2>
-                    </span>
-                </li>
+    <div class="container my-ct">
+        <header class="row my-r">
 
-            </ul>
+            <!-- LOGO -->
+            <a href="#" class="logo">
+                <img src="../images/logo.png" alt="">
+            </a>
+            <!-- LOGO/ -->
 
+            <!-- TEXTO NO CENTRO HEADER -->
+            <div class="col d-flex flex-column align-items-center justify-content-center">
+                <h1 class="text-center">n sei oq gov</h1>
+                <h3 class="text-center">Time</h1>
+            </div>
+            <!-- /TEXTO NO CENTRO HEADER -->
         </header>
 
-        <aside>
-            <ul>
-                <li><a href="/index.html">Home</a> </li>
-                <br /> <br /> <br /> <br /> <br /> <br /> <br />
-                <li>
-                    <a href="atletas.html">Atletas</a></li>
-                <br /> <br /> <br /> <br /> <br /> <br /> <br />
-                <li>
-                    <a href="contato.html">Contato</a></li>
-            </ul>
-        </aside>
+        <main class="row">
+            <!-- NAV LATERAL -->
+            <aside class="col-md-2 my-r">
 
-        <main>
-            <table>
-                <tr>
-                    <th>Nossas Atletas</th>
+                <ul class="lista-paginas">
+                    <li><a href="../index.html">Home</a></li>
+                    <li><a href="atletas.html">Atletas</a></li>
+                    <li><a href="contato.html">Contato</a></li>
+                </ul>
+            </aside>
+            <!-- /NAV LATERAL -->
 
-                </tr>
-                <td>
-                    <ul>
-                        <li>1 - Julia</li>
-                        <li>2 - Ana Caroline</li>
-                        <li>3 - Viviane</li>
-                        <li>4 - Adriana </li>
-                        <li>5 - Alessandra</li>
-                        <li>6 - Andressa</li>
-                        <li>7 - Rebeca</li>
-                        <li>13 - Isabel</li>
-                        <li>14 - Anne Kelly</li>
-                        <li>17 - Nicolle</li>
-                        <li>19 - Carla</li>
-                        <li>24 - Vanessa </li>
-                        <li>25 - Kathleen</li>
-                        <li>Tecnico - Mauricio</li>
-                    </ul>
-                </td>
-            </table>
+            <section class="col-md-10 my-r">
+                <h2 class="titulo-section">Atletas</h2>
+                
 
+                <p>descrição</p>
 
-            <table>
-                <tr>
-                    <th>Nossas principais competições</th>
-                </tr>
-
-                <td>
-                    <ol type="1">
-                        <li>Jogos Abertos de Santa Catarina - JASC</li>
-                        <li>Liga SC</li>
-                        <li>Torneios de Biguaçu</li>
-                        <li>Outras copas e torneios quando convidadas</li>
-                    </ol>
-                </td>
-
-
-            </table>
-
-            <img src="/images/jogador-de-handebol-e-goleiro-silhueta-ilustração-um-fundo-branco-isolado-arquivo-eps-disponível-160004469.jpg"
-                width="150pt" height="350pt" style="width: 400px">
-
-
-
-
-
+                
+            </section>
         </main>
 
 
+        <footer class="row">
+            <div class="col my-c">
+                redes sociais ICONE DE CADA REDE
+            </div>
+        </footer>
     </div>
+
+
+
+
+
+
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
+    </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
+    </script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
+    </script>
 </body>
 
 </html>
