--- a/index.html
+++ b/index.html
@@ -1,60 +1,160 @@
-<!DOCTYPE html>
-<html lang="pt-BR">
+<!doctype html>
+<html lang="en">
 
 <head>
-    <meta content="text/html; charset=UTF-8"   />
-    <title>Linguagem de programação 2 - Associação Sul Americana - Handebol Florianópolis</title>
-    <link rel="stylesheet" type="text/css" href="css/stylesheet.css" media="screen">
+    <title>Title</title>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/stylesheet.css">
 </head>
 
 <body>
-    <div class="container">
-        <header>
-            <ul>
-                <li class="link">
-                    <a href="http://www.acfutsal.com/"><img src="images/719.png" width="150pt" height="150pt"></a>
-                </li>
-                <li>
-                    <span class="titulo">
-                        <h1>Associação Sul Americana Esporte, Cultura, Turismo e Lazer</h1>
-                    </span>
-                    <br />
-                    <span class="subtitulo">
-                        <h2>Handebol Feminino - Florianópolis</h2>
-                    </span>
-                </li>
+    <div class="container my-ct">
+        <header class="row my-r">
 
-            </ul>
+            <!-- LOGO -->
+            <a href="#" class="logo">
+                <img src="images/logo.png" alt="">
+            </a>
+            <!-- LOGO/ -->
 
+            <!-- TEXTO NO CENTRO HEADER -->
+            <div class="col d-flex flex-column align-items-center justify-content-center">
+                <h1 class="text-center">n sei oq gov</h1>
+                <h3 class="text-center">Time</h1>
+            </div>
+            <!-- /TEXTO NO CENTRO HEADER -->
         </header>
 
-        <aside>
-            <ul>
-                <li><a href="index.html">Home</a> </li>
-                <li><a href="html/atletas.html">Atletas</a></li>
-                <li><a href="html/contato.html">Contato</a></li>
-            </ul>
-        </aside>
+        <main class="row">
+            <!-- NAV LATERAL -->
+            <aside class="col-md-2 my-r">
 
-        <main>
+                <ul class="lista-paginas">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="html/atletas.html">Atletas</a></li>
+                    <li><a href="html/contato.html">Contato</a></li>
+                </ul>
+            </aside>
+            <!-- /NAV LATERAL -->
 
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque risus lacus, congue ac molestie
-                ultricies, aliquam id libero. Nulla gravida, risus ac tincidunt accumsan, turpis nulla ornare metus,
-                eget varius metus nunc sit amet ex. Pellentesque
-                blandit lobortis ex quis congue. In aliquet, felis at aliquam scelerisque, dui velit volutpat urna, quis
-                lacinia ipsum lacus in ipsum. Pellentesque accumsan tortor ipsum, vel luctus turpis tempor in. Proin
-                vitae massa ultrices, pulvinar
-                est nec, tempus mauris. Nullam maximus velit id dolor condimentum feugiat. Quisque nec augue metus.
-                Donec iaculis, metus in cursus vulputate, libero enim auctor arcu, at tristique sem arcu a risus. Nulla
-                ultrices et ligula sed fringilla.
-                Donec scelerisque sit amet tellus eu consequat.</p>
-            <img src="images/IMG-20191010-WA0090.jpg" width="600px" height="350px"
-                alt="Time de handebol feminino de florianópolis">
+            <section class="col-md-10 my-r">
+                <h2 class="titulo-section">Atletas</h2>
 
+                <!-- CARDS -->
+                <div class="d-flex justify-content-center abas-principais m-1">
+                    <div class="media card position-relative">
+                        <div class="media-body">
+                            <h5 class="mt-0">abas mais abertas talvez eu nem sei mais o que to fazendo</h5>
+
+                            <a href="#" class="stretched-link">
+                                <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-link-45deg"
+                                    fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                                    <path
+                                        d="M4.715 6.542L3.343 7.914a3 3 0 1 0 4.243 4.243l1.828-1.829A3 3 0 0 0 8.586 5.5L8 6.086a1.001 1.001 0 0 0-.154.199 2 2 0 0 1 .861 3.337L6.88 11.45a2 2 0 1 1-2.83-2.83l.793-.792a4.018 4.018 0 0 1-.128-1.287z" />
+                                    <path
+                                        d="M6.586 4.672A3 3 0 0 0 7.414 9.5l.775-.776a2 2 0 0 1-.896-3.346L9.12 3.55a2 2 0 0 1 2.83 2.83l-.793.792c.112.42.155.855.128 1.287l1.372-1.372a3 3 0 0 0-4.243-4.243L6.586 4.672z" />
+                                </svg>
+                            </a>
+                        </div>
+                    </div>
+
+                    <div class="media card position-relative">
+                        <div class="media-body">
+                            <h5 class="mt-0">abas mais abertas talvez eu nem sei mais o que to fazendo</h5>
+
+                            <a href="#" class="stretched-link">
+                                <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-link-45deg"
+                                    fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                                    <path
+                                        d="M4.715 6.542L3.343 7.914a3 3 0 1 0 4.243 4.243l1.828-1.829A3 3 0 0 0 8.586 5.5L8 6.086a1.001 1.001 0 0 0-.154.199 2 2 0 0 1 .861 3.337L6.88 11.45a2 2 0 1 1-2.83-2.83l.793-.792a4.018 4.018 0 0 1-.128-1.287z" />
+                                    <path
+                                        d="M6.586 4.672A3 3 0 0 0 7.414 9.5l.775-.776a2 2 0 0 1-.896-3.346L9.12 3.55a2 2 0 0 1 2.83 2.83l-.793.792c.112.42.155.855.128 1.287l1.372-1.372a3 3 0 0 0-4.243-4.243L6.586 4.672z" />
+                                </svg>
+                            </a>
+                        </div>
+                    </div>
+
+                    <div class="media card position-relative">
+                        <div class="media-body">
+                            <h5 class="mt-0">abas mais abertas talvez eu nem sei mais o que to fazendo</h5>
+
+                            <a href="#" class="stretched-link">
+                                <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-link-45deg"
+                                    fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                                    <path
+                                        d="M4.715 6.542L3.343 7.914a3 3 0 1 0 4.243 4.243l1.828-1.829A3 3 0 0 0 8.586 5.5L8 6.086a1.001 1.001 0 0 0-.154.199 2 2 0 0 1 .861 3.337L6.88 11.45a2 2 0 1 1-2.83-2.83l.793-.792a4.018 4.018 0 0 1-.128-1.287z" />
+                                    <path
+                                        d="M6.586 4.672A3 3 0 0 0 7.414 9.5l.775-.776a2 2 0 0 1-.896-3.346L9.12 3.55a2 2 0 0 1 2.83 2.83l-.793.792c.112.42.155.855.128 1.287l1.372-1.372a3 3 0 0 0-4.243-4.243L6.586 4.672z" />
+                                </svg>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <!-- /CARDS -->
+
+                <p>descrição</p>
+
+                <!-- CAROUSEL -->
+                <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                    <ol class="carousel-indicators">
+                        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                    </ol>
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src="https://unsplash.it/721/250" class="d-block w-100" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="https://unsplash.it/720/250" class="d-block w-100" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="https://unsplash.it/719/250" class="d-block w-100" alt="...">
+                        </div>
+                    </div>
+                    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
+                </div>
+                <!--/ CAROUSEL -->
+            </section>
         </main>
 
 
+        <footer class="row">
+            <div class="col my-c">
+                redes sociais ICONE DE CADA REDE
+            </div>
+        </footer>
     </div>
+
+
+
+
+
+
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
+    </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
+    </script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
+    </script>
 </body>
 
 </html>
