--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Title</title>
+    <title>Handebol Feminino - Florianópolis</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -11,46 +11,49 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="css/stylesheet.css">
+    <!-- Fontawesome -->
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+        integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
 </head>
 
 <body>
-    <div class="container my-ct">
-        <header class="row my-r">
+    <div class="container ">
+        <header class="row ">
 
             <!-- LOGO -->
-            <a href="#" class="logo">
+            <a href="http://www.acfutsal.com/" class="logo">
                 <img src="images/logo.png" alt="">
             </a>
             <!-- LOGO/ -->
 
             <!-- TEXTO NO CENTRO HEADER -->
             <div class="col d-flex flex-column align-items-center justify-content-center">
-                <h1 class="text-center">n sei oq gov</h1>
-                <h3 class="text-center">Time</h1>
+                <h1 class="text-center">Associação Sul Americana de Esporte, Cultura, Turismo e Lazer </h1>
+                <h3 class="text-center">Handebol Feminino - Florianópolis</h1>
             </div>
             <!-- /TEXTO NO CENTRO HEADER -->
         </header>
 
         <main class="row">
             <!-- NAV LATERAL -->
-            <aside class="col-md-2 my-r">
+            <aside class="col-md-2 ">
 
                 <ul class="lista-paginas">
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="html/atletas.html">Atletas</a></li>
+                    <li><a href="html/rendimento.html">Rendimento</a></li>
                     <li><a href="html/contato.html">Contato</a></li>
                 </ul>
             </aside>
             <!-- /NAV LATERAL -->
 
-            <section class="col-md-10 my-r">
-                <h2 class="titulo-section">Atletas</h2>
+            <section class="col-md-10 ">
+                <h2 class="titulo-section"></h2>
 
                 <!-- CARDS -->
                 <div class="d-flex justify-content-center abas-principais m-1">
                     <div class="media card position-relative">
                         <div class="media-body">
-                            <h5 class="mt-0">abas mais abertas talvez eu nem sei mais o que to fazendo</h5>
+                            <h5 class="mt-0">Escolinhas</h5>
 
                             <a href="#" class="stretched-link">
                                 <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-link-45deg"
@@ -66,7 +69,7 @@
 
                     <div class="media card position-relative">
                         <div class="media-body">
-                            <h5 class="mt-0">abas mais abertas talvez eu nem sei mais o que to fazendo</h5>
+                            <h5 class="mt-0">Regras basicas</h5>
 
                             <a href="#" class="stretched-link">
                                 <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-link-45deg"
@@ -82,7 +85,7 @@
 
                     <div class="media card position-relative">
                         <div class="media-body">
-                            <h5 class="mt-0">abas mais abertas talvez eu nem sei mais o que to fazendo</h5>
+                            <h5 class="mt-0">Treinamentos</h5>
 
                             <a href="#" class="stretched-link">
                                 <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-link-45deg"
@@ -98,7 +101,7 @@
                 </div>
                 <!-- /CARDS -->
 
-                <p>descrição</p>
+                <!--Tirei a descrição pq no prototipo dos guri só tinha o carrosel... dai eu achei melhor tirar-->
 
                 <!-- CAROUSEL -->
                 <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
@@ -106,25 +109,40 @@
                         <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
                         <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
                         <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
                     </ol>
                     <div class="carousel-inner">
+
+
                         <div class="carousel-item active">
-                            <img src="https://unsplash.it/721/250" class="d-block w-100" alt="...">
+                            <img src="images/1.jpg" class="d-block w-100" alt="...">
                         </div>
                         <div class="carousel-item">
-                            <img src="https://unsplash.it/720/250" class="d-block w-100" alt="...">
+                            <img src="images/2.jpg" class="d-block w-100" alt="...">
                         </div>
                         <div class="carousel-item">
-                            <img src="https://unsplash.it/719/250" class="d-block w-100" alt="...">
+                            <img src="images/3.jpg" class="d-block w-100" alt="...">
                         </div>
+                        <div class="carousel-item">
+                            <img src="images/4.jpg" class="d-block w-100" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="images/5.jpg" class="d-block w-100" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="images/6.jpg" class="d-block w-100" alt="...">
+                        </div>
+
                     </div>
                     <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
                         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Previous</span>
+                        <span class="sr-only">Anterior</span>
                     </a>
                     <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
                         <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Next</span>
+                        <span class="sr-only">Próximo</span>
                     </a>
                 </div>
                 <!--/ CAROUSEL -->
@@ -132,11 +150,18 @@
         </main>
 
 
-        <footer class="row">
-            <div class="col my-c">
-                redes sociais ICONE DE CADA REDE
+        <footer class="row d-flex justify-content-center align-items-center">
+            <div class="socials">
+                <span>Acompanhe-nos:</span>
+                <a href="https://www.facebook.com/ASulAmericana/" id="icon-facebook" target="_blank"><i class="fab fa-facebook"></i></a>
+                <a href="https://www.youtube.com/channel/UClsVmHdQrdLtYCcaIBMEDIQ/featured" id="icon-youtube" target="_blank"><i class="fab fa-youtube"></i></a>
+                <a href="https://www.instagram.com/handfloripa/?igshid=2fvburvublqg" id="icon-instagram" target="_blank"><i class="fab fa-instagram"></i></a>
             </div>
+            
         </footer>
+        <div class="copy-alunos row d-flex justify-content-center align-items-center">
+            &copy; USJ - ADS | Desenvolvido por Maria Eduarda & Matheus Alves
+        </div>
     </div>
 
 
